<resources>
    <string name="app_name">video_decrypt</string>
    <string name="auto_fill_hints">请输入内容</string>
    <string name="path_hint">请输入路径文件</string>
    <string name="open_m3u8">打开M3U8</string>
    <string name="play_m3u8">播放M3U8</string>
    <string name="analysis_m3u8">解析M3U8</string>
    <string name="browser_download">浏览器下载</string>
    <string name="ts_download">切片下载</string>
    <string name="ts_combine">切片合并</string>
    <string name="ts_decrypt">切片解密</string>
    <string name="video_player">播放器播放</string>
    <string name="permission_storage">请求存储权限</string>
    <string name="video_part_one">Part 1</string>
    <string name="video_part_two">Part 2</string>
    <string name="video_part_three">Part 3</string>
    <string name="video_part_four">Part 4</string>
    <string name="analysis">解析</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="download_now">开始下载</string>
    <string name="download_resume">继续下载</string>
    <string name="download_restart">重新下载</string>
    <string name="deduplicate">去重</string>
    <string name="stop">停止</string>
    <string name="resume">继续</string>
    <string name="exo_player_default">EXO默认播放器</string>
    <string name="exo_player_simple_custom">EXO简单定义播放器</string>
    <string name="exo_player_senior_custom">EXO高级播放器</string>
</resources>
